--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="page-header">Our Team</h2>
          </div>
          <div class="col-lg-4 col-sm-6 text-center">
-            <img class="img-circle img-responsive img-center" src="/img/eric.jpg" alt="" width="210">
+            <img class="img-circle img-responsive img-center" src="http://i.imgur.com/Yplgs1L.jpg" alt="" width="210">
             <h3>Eric Demauro
                 </h3>
             <p>Eric Demauro is a full stack web developer here at the CSUN Campus! He knows a ton about the latest webdev frameworks and the MEAN stack.</p>
