--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="Ssubmissions" id="Ssubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Seminar submissions</h2>
-            <h4><a href="SeminarSubmissions/Seminar%20proposal.docx" target="_blank">Seminar Proposal (incomplete) 01/31/2016</a></h4>
+            <h4><a href="SeminarSubmissions/Seminar%20proposal.docx" target="_blank">Seminar Proposal 01/31/2016</a></h4>
          </div>
       </div>
 
@@ -70,13 +70,13 @@
             <img class="img-circle img-responsive img-center" src="https://media.licdn.com/media/AAEAAQAAAAAAAAUhAAAAJDU5ODQ2YzM5LTNhODYtNDRiMC1hOWQ0LTk5MDVkYzMxYmI2OQ.jpg" alt="" width="200">
             <h3>Chris Tufenkjian
                 </h3>
-            <p>Chris Tufenkjian is a software developer for the CSUN CubeSat team, he currently is wrapping up his thesis project on data visualizations.</p>
+            <p>Chris Tufenkjian is a software developer for the CSUN CubeSat team, he currently is wrapping up his thesis project on data visualizations for a satellite.</p>
          </div>
          <div class="col-lg-4 col-sm-6 text-center">
             <img class="img-circle img-responsive img-center" src="https://media.licdn.com/media/p/4/000/1b7/32f/0898ef4.jpg" alt="" width="200">
             <h3>Nir Studnitski
                 </h3>
-            <p>Nir Studnitski is a film industry screenwriter and turned software developer. He currently is starting his thesis project on optimizing traffic flow for automated cars.</p>
+            <p>Nir Studnitski is a film industry screenwriter guru turned software developer. He currently is starting his thesis project on optimizing traffic flow for automated cars.</p>
          </div>
       </div>
 
@@ -85,7 +85,7 @@
             <h2 class="page-header">Contact</h2>
          </div>
          <div class="col-lg-12 col-sm-12 text-left">
-            <h4>Chris Tufenkjian - erickdemauro@gmail.com</h4>
+            <h4>Chris Tufenkjian - chris4355@gmail.com</h4>
             <h4>Eric Demauro - erickdemauro@gmail.com</h4>
             <h4>Nir Studnitski - nir.stud@gmail.com</h4>
          </div>
