Added project proposal

--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
       <div class="Psubmissions" id="Psubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Project submissions</h2>
+            <h4><a href="ProjectSubmissions/ProjectProposal.docx" target="_blank">Project Proposal 02/08/2016</a></h4>
          </div>
       </div>
 
       <div class="Ssubmissions" id="Ssubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Seminar submissions</h2>
-            <h4><a href="SeminarSubmissions/Seminar%20proposal.docx" target="_blank">Seminar Proposal 02/01/2016</a></h4>
+            <h4><a href="SeminarSubmissions/Seminarproposal.docx" target="_blank">Seminar Proposal 02/01/2016</a></h4>
          </div>
       </div>
 
