--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       <div class="Psubmissions" id="Psubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Project submissions</h2>
-            <h4><a href="ProjectSubmissions/ProjectProposal.docx" target="_blank">Project Proposal 02/08/2016</a></h4>
+            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13735&authkey=!AOZnJXjjoepMx7U&ithint=file%2cdocx" target="_blank">Project Proposal 02/15/2016</a></h4>
          </div>
       </div>
 
       <div class="Ssubmissions" id="Ssubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Seminar submissions</h2>
-            <h4><a href="SeminarSubmissions/Seminarproposal.docx" target="_blank">Seminar Proposal 02/01/2016</a></h4>
+            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13734&authkey=!AI34K9n5yyjLgis&ithint=file%2cdocx" target="_blank">Seminar Proposal 02/01/2016</a></h4>
          </div>
       </div>
 
