--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
          <div class="col-lg-12">
             <h2 class="page-header">Project submissions</h2>
             <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13735&authkey=!AOZnJXjjoepMx7U&ithint=file%2cdocx" target="_blank">Project Proposal 02/15/2016</a></h4>
+            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13738&authkey=!AIthCgx4mV3nHd4&ithint=file%2cxlsx" target="_blank">Progress Report 02/15/2016</a></h4>
          </div>
       </div>
 
