--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <h2 class="page-header">Project submissions</h2>
             <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13735&authkey=!AOZnJXjjoepMx7U&ithint=file%2cdocx" target="_blank">Project Proposal 02/15/2016</a></h4>
             <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13738&authkey=!AIthCgx4mV3nHd4&ithint=file%2cxlsx" target="_blank">Progress Report 02/15/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1XSQbYqv5hTz9sto6GVc12EANnySKVosUQxwVGlC_Xf4/pubhtml" target="_blank">Progress Report 02/22/2016</a></h4>
          </div>
       </div>
-
       <div class="Ssubmissions" id="Ssubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Seminar submissions</h2>
