--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
       <div class="Psubmissions" id="Psubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Project submissions</h2>
-            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13735&authkey=!AOZnJXjjoepMx7U&ithint=file%2cdocx" target="_blank">Project Proposal 02/15/2016</a></h4>
-            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13738&authkey=!AIthCgx4mV3nHd4&ithint=file%2cxlsx" target="_blank">Progress Report 02/15/2016</a></h4>
-            <h4><a href="https://docs.google.com/spreadsheets/d/1XSQbYqv5hTz9sto6GVc12EANnySKVosUQxwVGlC_Xf4/pubhtml" target="_blank">Progress Report 02/22/2016</a></h4>
-            <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nSlZUM053MTYtV00/view?usp=sharing" target="_blank">Progress Report 02/29/2016</a></h4>
+            <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nS254X3lJNGN2WUE/view?usp=sharing" target="_blank">Project Proposal 02/15/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1Z3BLASaXeKltyLHQeBCPJbW6XG4gV1qnIni2isjeZGo/edit?usp=sharing" target="_blank">Progress Report 02/15/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1-7NpPzhfpnQ3EqP0UurGgauQNPAbb8mXgidkJrpXh5s/edit?usp=sharing" target="_blank">Progress Report 02/22/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1XSQbYqv5hTz9sto6GVc12EANnySKVosUQxwVGlC_Xf4/edit?usp=sharing" target="_blank">Progress Report 02/29/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1cai_7fWNDUYJv_Ag3KXx2MlcAcgrpuvK1eqmzW7HBEc/edit?usp=sharing" target="_blank">Progress Report 03/07/2016</a></h4>
          </div>
       </div>
       <div class="Ssubmissions" id="Ssubmissions">
          <div class="col-lg-12">
             <h2 class="page-header">Seminar submissions</h2>
-            <h4><a href="https://onedrive.live.com/redir?resid=78C3541073BBB90B!13734&authkey=!AI34K9n5yyjLgis&ithint=file%2cdocx" target="_blank">Seminar Proposal 02/01/2016</a></h4>
+            <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nZS1Ncm1fR1FNa00/view?usp=sharing" target="_blank">Seminar Proposal 02/01/2016</a></h4>
+            <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nNXhzcDdUb0YyZzg/view?usp=sharing" target="_blank">First Seminar PDF</a></h4>
          </div>
       </div>
 
