--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="page-header">Seminar submissions</h2>
             <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nZS1Ncm1fR1FNa00/view?usp=sharing" target="_blank">Seminar Proposal 02/01/2016</a></h4>
             <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nNXhzcDdUb0YyZzg/view?usp=sharing" target="_blank">First Seminar PDF</a></h4>
-            <h4><a href="https://docs.google.com/document/d/1WZ7VhdeYB3xUoPyMC3-Yv4Ntr9RkJdWGZ7YGpr_GKbc/edit?usp=sharing" target="_blank">Seminar Paper, First Draft 03/14/2016</a></h4>
+            <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nNDZyYmRIRWFUZVU/view?usp=sharing" target="_blank">Seminar Paper, First Draft 03/14/2016</a></h4>
          </div>
       </div>
 
