--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <h4><a href="https://docs.google.com/spreadsheets/d/1XSQbYqv5hTz9sto6GVc12EANnySKVosUQxwVGlC_Xf4/edit?usp=sharing" target="_blank">Progress Report 02/29/2016</a></h4>
             <h4><a href="https://docs.google.com/spreadsheets/d/1cai_7fWNDUYJv_Ag3KXx2MlcAcgrpuvK1eqmzW7HBEc/edit?usp=sharing" target="_blank">Progress Report 03/07/2016</a></h4>
             <h4><a href="https://docs.google.com/spreadsheets/d/1_J11useIFY1qTxKAJIc8e-LauWvbB-HVzUH_E5ShoMY/edit?usp=sharing" target="_blank">Progress Report 03/14/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1pPkJHpeavY4Xv_5jre53QQa6Aqe8JSIeq_I3sMiBIRU/edit?usp=sharing" target="_blank">Progress Report 03/28/2016</a></h4>
+            <h4><a href="https://docs.google.com/document/d/1Ps7BMco5Ke7pwshWNgJGG5pD7qYWW7xCrlxVFEMM_Wc/edit#" target="_blank">Updated Project Proposal 03/28/2016</a></h4>
          </div>
       </div>
       <div class="Ssubmissions" id="Ssubmissions">
@@ -74,7 +76,7 @@
             <p>Eric Demauro is a full stack web developer here at the CSUN Campus! He knows a ton about the latest webdev frameworks and the MEAN stack.</p>
          </div>
          <div class="col-lg-4 col-sm-6 text-center">
-            <img class="img-circle img-responsive img-center" src="https://media.licdn.com/media/AAEAAQAAAAAAAAUhAAAAJDU5ODQ2YzM5LTNhODYtNDRiMC1hOWQ0LTk5MDVkYzMxYmI2OQ.jpg" alt="" width="200">
+            <img class="img-circle img-responsive img-center" src="img/chris.PNG" alt="" width="200">
             <h3>Chris Tufenkjian
                 </h3>
             <p>Chris Tufenkjian is a software developer for the CSUN CubeSat team, he currently is wrapping up his thesis project on data visualizations for a satellite.</p>
