updated project info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <h4><a href="https://docs.google.com/spreadsheets/d/1uWn9OVYXBelN6u_-nZeEiMs0iKeTaqNPX4mdI_enIdA/edit?usp=sharing" target="_blank">Progress Report 04/11/2016</a></h4>
             <h4><a href="https://docs.google.com/spreadsheets/d/1IwCb5khaxjgzO7JzV7ej_uO_8FNFZ0gG4QTfX-wwyxQ/edit?usp=sharing" target="_blank">Progress Report 04/18/2016</a></h4>
             <h4><a href="https://docs.google.com/spreadsheets/d/1E1qbrKzRZzMi2IrBFiUOBC8oxNsHKh05qUgNTFQ_XtA/edit?usp=sharing" target="_blank">Progress Report 04/25/2016</a></h4>
+            <h4><a href="https://docs.google.com/spreadsheets/d/1FBV3tN-uMLQNB2H6ux4xxWQHMyVrWI5nw_HxO_i3BEI/edit?usp=sharing" target="_blank">Progress Report 05/02/2016</a></h4>
             <h4><a href="https://docs.google.com/document/d/1Ps7BMco5Ke7pwshWNgJGG5pD7qYWW7xCrlxVFEMM_Wc/edit?usp=sharing" target="_blank">Updated Project Proposal 03/28/2016</a></h4>
+            <h4><a href="https://github.com/CT1234/jobSeeker" target="_blank">Project Repository 05/02/2016</a></h4>
          </div>
       </div>
       <div class="Ssubmissions" id="Ssubmissions">
@@ -66,6 +68,7 @@
             <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nZS1Ncm1fR1FNa00/view?usp=sharing" target="_blank">Seminar Proposal 02/01/2016</a></h4>
             <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nNXhzcDdUb0YyZzg/view?usp=sharing" target="_blank">First Seminar PDF</a></h4>
             <h4><a href="https://drive.google.com/file/d/0B_MfwF_GH83nNDZyYmRIRWFUZVU/view?usp=sharing" target="_blank">Seminar Paper, First Draft 03/14/2016</a></h4>
+            <h4><a href="https://docs.google.com/document/d/1zv0nBLgzlPhfM6bSZPUmPKFFzrDBbhuDZhnY8J6R9ZE/edit?usp=sharing" target="_blank">Seminar Paper, Final Draft 05/02/2016</a></h4>
          </div>
       </div>
 
